tests/files/flow_controller_tests/should_run/040.cmdr
x = parseBool(0.0);
print x;