tests/files/flow_controller_tests/should_fail/064.cmdr
x = true;
print cosh(x);